# mcp-translation-text

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
scripts/: start.ps1  start.sh
src/: translation_server.py
src/mcp_translation_text.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
